Fix to ForceGraph to stop nodes being hidden behind search

--- a/src/components/ForceGraph.module.css
+++ b/src/components/ForceGraph.module.css
@@ -7,6 +7,8 @@
 }
 
 .graph {
+  position: relative;
+  top: 5%;
   height: 100%;
   width: 100%;
   border: black;
